--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".views.LocaleActivity"/>
+        <activity android:name=".views.FlashActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+        <activity android:name=".views.AddCardActivity"/>
     </application>
 
 </manifest>
